fix text wrapping

--- a/files/style.css
+++ b/files/style.css
@@ -48,7 +48,9 @@ header {
 }
 
 p {
-    margin: 0 50px 0 0;
+    margin: 0;
+    overflow-wrap: break-word;
+    max-width: 422px;
 }
 
 .speeches {
@@ -108,11 +110,11 @@ p {
     height: 15px;
     position: absolute;
     bottom: 5px;
-    left: 45px
+    left: 45px;
+    margin-bottom: 0;
 }
 
 .time {
-    margin-right: 10px;
     text-align: right;
     font-size: 18px;
     color: gray;
